[package]
name = "dotcom"
version = "0.0.1"
edition = "2021"
authors = ["Seth Bywater <seth@sethbywater.com>"]
description = "A simple static site generator"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
