[package]
name = "dotcom"
version = "0.1.0"
edition = "2021"
authors = ["Seth Bywater <seth@sethbywater.com>"]
repository = "https://github.com/sethbywater/dotcom"
description = "A simple static site generator"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tera = "1.12.0"
pulldown-cmark = "0.8.0"
glob = "0.3.0"
serde_json = "1.0.64"
lazy_static = "1.4.0"
